--- a/pages/internship/internship.wxss
+++ b/pages/internship/internship.wxss
@@ -1,1 +1,28 @@
 /* pages/internship/internship.wxss */
+.main {
+	width: 90%;
+	padding: 5%;
+	margin: 0 auto;
+  height: 100%;
+}
+
+.item {
+  height: 258px;
+  border: 1px solid #314d89;
+}
+
+.wrapper1 {
+  display: grid; 
+  grid-template-columns: 100%; 
+  grid-template-rows: auto 1px auto; 
+} 
+
+.wrapper2 {
+  display: grid; 
+  grid-template-columns: 50% 50%; 
+  grid-template-rows: auto 1px auto; 
+} 
+.box { 
+  font-size: 70%; 
+  padding: 5px; 
+} 
